--- a/week1/notebooks/02_intro_to_tidyverse2.qmd
+++ b/week1/notebooks/02_intro_to_tidyverse2.qmd
@@ -3,7 +3,7 @@ title: "tidyverse intro"
 author: "Jeremy Mikecz"
 format: html
 editor: visual
-jupyter: ir
+#jupyter: ir
 ---
 
 # Introduction to Tidyverse
