--- a/notebooks/8_spatial_data_science_and_analysis_quartodoc.qmd
+++ b/notebooks/8_spatial_data_science_and_analysis_quartodoc.qmd
@@ -104,6 +104,115 @@ print(longitude)
 
 ```
 
+Heatmap of point data
+
 ```{r}
+
+# Load libraries
+library(sf)         # For handling simple features
+library(ggplot2)    # For plotting
+library(maps)       # To get map data
+
+# Set working directory (adjust path if necessary)
+setwd('~/Downloads')
+
+# Load point data with latitude and longitude from CSV file
+points <- read.csv('geocoded_eee_data_valid_lat_long.csv')
+
+# Check the first few rows of the dataframe to view field names, numbers, etc 
+head(points)
+
+# Filter to make sure there are no NA values in lat/long columns (if needed)
+points <- points[complete.cases(points[c('longitude', 'latitude')]), ]
+
+# Convert the points data frame to a simple features object and set the CRS to EPSG 4326 (WGS 84)
+points_sf <- sf::st_as_sf(points, coords = c('longitude', 'latitude'), crs = 4326)
+head(points_sf)
+
+# Create the base map of Massachusetts
+massachusetts_map <- ggplot2::map_data("state", "massachusetts")
+
+# Create the plot with the base map and add the points_sf layer 
+plot1 <- ggplot() +
+  geom_polygon(data = massachusetts_map, aes(x = long, y = lat, group = group), fill = "lightblue", color = "black") +
+  geom_sf(data = points_sf, aes(geometry = geometry), color = "red", size = 3) +
+  ggtitle("Map of Massachusetts with Points") +
+  theme_minimal()
+# Display the plot
+print(plot1)
+
+# https://jtr13.github.io/cc19/different-ways-of-plotting-u-s-map-in-r.html 
+
+#===
+#install.packages('ggmap')
+
+library(ggmap)      # For creating heatmap (Optional)
+library(MASS)       # For the kde2d function used in creating a heat map
+# see also https://www.rdocumentation.org/packages/MASS/versions/7.3-64/topics/kde2d
+
+# Create a heatmap of the points
+heatmap_plot_with_legend <- ggplot() +
+  geom_polygon(data = massachusetts_map, aes(x = long, y = lat, group = group), fill = "lightblue", color = "black") + 
+  # Generate a density estimate of the point locations
+  ggplot2::stat_density_2d(data = points, aes(x = longitude, y = latitude, fill = ..level..), 
+                  geom = "polygon", alpha = 0.5) +  # Use polygon for fill
+  geom_sf(data = points_sf, aes(geometry = geometry), color = "black", size = 0.5, alpha = 0.3) +
+  ggtitle("Heatmap of Points in Massachusetts") +
+  scale_fill_viridis_c(name = "Density Level") +  # Specify fill scale and legend title
+  theme_minimal() +
+  theme(legend.position = "right")  # Position the legend on the right side
+# Display the heatmap
+print(heatmap_plot_with_legend)
+
+# ============
+usstates_map <- ggplot2::map_data("state")
+# Create the plot with the base map and add the points_sf layer 
+plot1 <- ggplot() +
+  geom_polygon(data = usstates_map, aes(x = long, y = lat, group = group), fill = "lightblue", color = "black") +
+  geom_sf(data = points_sf, aes(geometry = geometry), color = "red", size = 3) +
+  ggtitle("Map with Points") +
+  theme_minimal()
+# Display the plot
+print(plot1)
+
+# join data 
+# https://r4ds.hadley.nz/joins.html
+
+
+
+zipcode_lat_lon_lookup_df <- read.csv('zipcode_centroids.csv')
+# Load the dplyr package
+library(dplyr)
+
+# Assuming zipcodes_df is your data frame with just zip codes
+# and lookup_df is your lookup table with zipcodes, latitudes, and longitudes
+
+# Perform a left join to add latitude and longitude to the zipcode data frame
+# Note: Make sure the column names are correctly specified according to your data frames
+
+# Create a new data frame with Massachusetts zip codes
+massachusetts_zipcodes <- data.frame(zipcode = c("47435", "02115", "01890"))
+head(massachusetts_zipcodes)
+
+# Create a new field called 'zipcode' populated with values from the 'ZIP' field
+zipcode_lat_lon_lookup_df <- zipcode_lat_lon_lookup_df %>%
+  mutate(zipcode = ZCTA5CE20)
+head(zipcode_lat_lon_lookup_df)
+
+# Make sure both zipcode columns are of character type
+zipcode_lat_lon_lookup_df$zipcode <- as.character(zipcode_lat_lon_lookup_df$zipcode)
+head(zipcode_lat_lon_lookup_df)
+
+# Perform the left join after ensuring compatible types
+enriched_zipcodes_df <- massachusetts_zipcodes %>%
+  left_join(zipcode_lat_lon_lookup_df, by = "zipcode")
+head(enriched_zipcodes_df)
+
+
+enriched_zipcodes_df <- massachusetts_zipcodes %>%
+  left_join(zipcode_lat_lon_lookup_df, by = "zipcode")
+
+head(enriched_zipcodes_df)
+
 
 ```
