--- a/notebooks/4_basic_R_stats_t_test_quartodoc.qmd
+++ b/notebooks/4_basic_R_stats_t_test_quartodoc.qmd
@@ -11,7 +11,7 @@ Note: Github
 R-Data-Analysis-and-Visualization % git add notebooks/4_basic_R_stats_t_test_quartodoc.qmd (base) f002d69\@RJXCK02LJ0 R-Data-Analysis-and-Visualization % git commit -m 'add t test' \[main 5401abd\] add t test 1 file changed, 13 insertions(+) (base) f002d69\@RJXCK02LJ0 R-Data-Analysis-and-Visualization % git push
 
 ```{r}
-# Load library
+# Load the 'dplyr' library (data pliers) 
 library(dplyr)
 
 # Load dataset
@@ -21,7 +21,10 @@ data(mtcars)
 automatic_cars <- mtcars %>% filter(am == 1)
 manual_cars    <- mtcars %>% filter(am == 0)
 head(automatic_cars)
-head(manual_cars)
+
+```
+
+```{r}
 
 # Compute descriptive statistics and summarize data for each group
 autosummary <- automatic_cars %>%
