--- a/notebooks/4_basic_R_stats_t_test_quartodoc.qmd
+++ b/notebooks/4_basic_R_stats_t_test_quartodoc.qmd
@@ -56,13 +56,13 @@ manusummary
 ttest_result <- t.test(automatic_cars$mpg, manual_cars$mpg)
 
 # Interpret t-test results
-cat('t-test statistic :', ttest_result$statistic)
+cat(' t-test statistic :', ttest_result$statistic, ' ')
 #cat('degrees of freedom:', ttest_result$
 cat('p-value :', ttest_result$p.val)
 if (ttest_result$p.val < 0.05){
-  cat("Conclusion:  there very likely IS a significant difference in mean mpg between cars with automatic and manual transmission, the low p-value tells us that the null hypothesis, that the means were equal, is false (Reject H0 the null hypothesis)")
+  cat(" Conclusion: because the p.val is less than 0.05 when we compare the means with the t.test functino, there very likely IS a significant difference in mean mpg between cars with automatic and manual transmission, the low p-value tells us that the null hypothesis, that the means were equal, is false (Reject H0 the null hypothesis)")
 } else {
-  cat("Fail to reject H0, no significant difference in mean mpg between cars with automatic and manual transmission.")
+  cat(" Fail to reject H0, no significant difference in mean mpg between cars with automatic and manual transmission.")
 }
 
 # ("Reject H0, there is a significant difference in mean mpg between cars with automatic and manual transmission")
@@ -71,3 +71,7 @@ if (ttest_result$p.val < 0.05){
 ```{r}
 
 ```
+
+Additional links:
+
+<https://www.w3schools.com/r/r_stat_intro.asp>
