--- a/notebooks/5_r_swirl_stats_demo_quarto.qmd
+++ b/notebooks/5_r_swirl_stats_demo_quarto.qmd
@@ -4,13 +4,9 @@ format: html
 editor: visual
 ---
 
-## Quarto
+## R and the Swirlstats library
 
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
-
-## Running Code
-
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
+R and the **SwirlStats** library, see [SwirlStats](https://swirlstats.com/ "SwirlStats"){.uri}.
 
 ```{r}
 # Load necessary libraries
