--- a/notebooks/5_r_swirl_stats_demo_quarto.qmd
+++ b/notebooks/5_r_swirl_stats_demo_quarto.qmd
@@ -94,6 +94,96 @@ print(chi_square_result)
 #This code covers key EDA techniques, a basic t-test, and a chi-square test, making it ideal for an introductory R workshop.
 
 
+# Load necessary libraries
+library(ggplot2)
+library(dplyr)
+library(tidyr)
+library(car)
+
+# 1. T-Test: Comparing the means of two groups (Automatic vs Manual Transmission)
+mtcars$am <- as.factor(mtcars$am)  # Convert 'am' to a factor
+t_test_result <- t.test(mpg ~ am, data = mtcars)
+
+# Print the T-Test result and explanation
+print(t_test_result)
+cat("\nT-Test Result:\n")
+cat("This test compares the mean miles per gallon (mpg) between automatic (am=0) and manual (am=1) transmission cars.\n")
+
+# Check significance
+if (t_test_result$p.value < 0.05) {
+  cat("Result: Statistically significant difference in mpg (p < 0.05).\n")
+} else {
+  cat("Result: No statistically significant difference in mpg (p ≥ 0.05).\n")
+}
+
+# Plot the T-Test
+ggplot(mtcars, aes(x = am, y = mpg)) +
+  geom_boxplot() +
+  labs(title = "Miles per Gallon by Transmission Type", x = "Transmission (0 = Automatic, 1 = Manual)", y = "Miles Per Gallon") +
+  theme_minimal()
+
+
+# 2. ANOVA: Comparing means between more than two groups (Cylinders)
+anova_result <- aov(mpg ~ factor(cyl), data = mtcars)
+anova_summary <- summary(anova_result)
+
+# Print the ANOVA result and explanation
+print(anova_summary)
+cat("\nANOVA Result:\n")
+cat("This test compares the mean miles per gallon (mpg) across different cylinder groups.\n")
+
+# Check significance
+if (anova_summary[[1]][["Pr(>F)"]][1] < 0.05) {
+  cat("Result: At least one group is statistically significant (p < 0.05).\n")
+} else {
+  cat("Result: No statistically significant differences between groups (p ≥ 0.05).\n")
+}
+
+# Plot the ANOVA
+ggplot(mtcars, aes(x = factor(cyl), y = mpg)) +
+  geom_boxplot() +
+  labs(title = "Miles per Gallon by Cylinder Count", x = "Number of Cylinders", y = "Miles Per Gallon") +
+  theme_minimal()
+
+
+# 3. Correlation: Correlation between horsepower and miles per gallon
+correlation_result <- cor.test(mtcars$hp, mtcars$mpg)
+
+# Print the Correlation result and explanation
+print(correlation_result)
+cat("\nCorrelation Result:\n")
+cat("This test assesses the strength and direction of the association between horsepower (hp) and miles per gallon (mpg).\n")
+
+# Check significance
+if (correlation_result$p.value < 0.05) {
+  cat("Result: Statistically significant correlation (p < 0.05).\n")
+} else {
+  cat("Result: No statistically significant correlation (p ≥ 0.05).\n")
+}
+
+# Plot the correlation
+ggplot(mtcars, aes(x = hp, y = mpg)) +
+  geom_point() +
+  geom_smooth(method = 'lm', color = 'blue') +
+  labs(title = "Correlation between Horsepower and Miles Per Gallon", x = "Horsepower", y = "Miles Per Gallon") +
+  theme_minimal()
+
+
+# 4. Chi-Squared Test: Testing association between two categorical variables (Transmission and Cylinders)
+chi_squared_result <- chisq.test(table(mtcars$am, mtcars$cyl))
+
+# Print the Chi-Squared result and explanation
+print(chi_squared_result)
+cat("\nChi-Squared Test Result:\n")
+cat("This test assesses whether there is an association between transmission type (automatic/manual) and the number of cylinders.\n")
+
+# Check significance
+if (chi_squared_result$p.value < 0.05) {
+  cat("Result: Statistically significant association between variables (p < 0.05).\n")
+} else {
+  cat("Result: No statistically significant association between variables (p ≥ 0.05).\n")
+}
+
 install.packages("swirlstats")
 library(swirl)
 # https://swirlstats.com/
